# litmus

./: .gitignore  .gitmodules  Behavior Divergence in Olmo (Base -_ SFT) - Litmus.csv  LICENSE  README.md  analysis_olmo_draft.md  behavioral_taxonomy.csv  logbook.md  main.py  message.txt  pyproject.toml
logs/: 2026-02-25T13-16-12+00-00_taxonomy-eval_g2NND473vES3HPzjZLn96n.eval  2026-02-25T13-17-25+00-00_taxonomy-eval_kVxhRmJ65dC2j83yvcm6Dg.eval  2026-02-25T13-25-08+00-00_taxonomy-eval_cEikcZXstXJpKe7e8nD7j2.eval  2026-02-25T13-29-40+00-00_taxonomy-eval_Rprha5bZYijoJpyRqfT2xA.eval  2026-02-25T13-30-01+00-00_taxonomy-eval_FnFGo5AtesmiPqfxxvpZvp.eval  2026-02-25T13-32-57+00-00_taxonomy-eval_SoaQzUAyasmAQ7MVbj72xc.eval  2026-02-25T13-37-26+00-00_taxonomy-eval_boZbKjiF8JYdmuKhFPeXMd.eval  2026-02-25T13-49-44+00-00_taxonomy-eval_Pu7UW292s2Xy8vJ6cZeB7o.eval  2026-02-25T13-58-51+00-00_petri-eval_mmyWQB3XnUznofCPYfcidZ.eval  2026-02-25T14-17-35+00-00_taxonomy-eval_Gf5Ni6T2FxfexdvMgw8G96.eval  2026-02-25T14-39-38+00-00_agentic-and-strategic_QyUUBUFAk68WBdMuUDrBE4.eval  2026-02-25T14-39-38+00-00_biases-and-stereotypes_bQeiNpfG3i9vCBm84FuRpc.eval  2026-02-25T14-39-38+00-00_creativity-and-generation_WAvADJBd367w7jfeJGLoRX.eval  2026-02-25T14-39-38+00-00_cultural-and-contextual_n6GZzoryKQsE4schDgra8s.eval  2026-02-25T14-39-39+00-00_domain-specific_A4nA6iivziVhw64xn6x77m.eval  2026-02-25T14-39-40+00-00_agentic-and-strategic_4KyAvKVJFkmgZ2vvx5UfMD.eval  2026-02-25T14-39-40+00-00_biases-and-stereotypes_4cEEhXkeiWpZRgtvyPtHM9.eval  2026-02-25T14-39-40+00-00_creativity-and-generation_ciB5xEK86erVNB4xJBXozP.eval  2026-02-25T14-39-40+00-00_cultural-and-contextual_DtfTs83Xa7M2k7GuijjuDU.eval  2026-02-25T14-39-40+00-00_domain-specific_2QUtUibn8QgNYhjL85gwMF.eval  2026-02-25T14-47-52+00-00_emotional-and-interpersonal_5uwPZc6v2Jv2jq8kA3ezcC.eval  2026-02-25T14-47-52+00-00_instruction-following_7Lzd3CDGMdgtp6GHBkCBpT.eval  2026-02-25T14-47-53+00-00_metacognitive-and-reflective_nbpRMBbDhah9QKt6h9Z7nB.eval  2026-02-25T14-47-53+00-00_political-and-social_7FkNxWFoWzLs2RAYjdn9jj.eval  2026-02-25T14-47-53+00-00_robustness-and-consistency_TkjnRGfoiRPDwFMWM7sm32.eval  2026-02-25T14-47-54+00-00_biases-and-stereotypes_deeD9tdP2A4iqet6BoPMDx.eval  2026-02-25T14-47-54+00-00_knowledge-and-uncertainty_Umd8iTWwK939RXccsBh47L.eval  (+2 more)
(+255 files in other folders)
